--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -5,6 +5,14 @@ html {
 }
 
 header {
+    display: flex;
+    justify-content: space-evenly;
     align-items: center;
     font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 30px;
+}
+h2 {
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
 }
