--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -12,7 +12,25 @@ header {
     font-weight: 700;
     font-size: 30px;
 }
-h2 {
+
+#income {
     font-family: 'Raleway', sans-serif;
-    font-size: 20px;
+    font-size: 15px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#expenses {
+    font-family: 'Raleway', sans-serif;
+    font-size: 15px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+}
+
+button {
+    cursor: pointer;
 }
