--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -15,7 +15,7 @@ header {
 
 #income {
     font-family: 'Raleway', sans-serif;
-    font-size: 15px;
+    font-size: 25px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -24,7 +24,7 @@ header {
 
 #expenses {
     font-family: 'Raleway', sans-serif;
-    font-size: 15px;
+    font-size: 20px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -33,4 +33,19 @@ header {
 
 button {
     cursor: pointer;
+}
+
+footer{
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+}
+
+.socials {
+    list-style: none;
+}
+
+.socials li{
+    display: inline-block;
+    margin: 0px 25px;
+    font-size: 50px;
 }
