--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -4,22 +4,42 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    background-color: #abdca7;
+}
+
 header {
+    background-color: white;
+    border-radius: 15px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     font-family: 'Raleway', sans-serif;
-    font-weight: 700;
     font-size: 30px;
+    font-weight: 700;
+}
+
+nav {
+    background-color: white;
+    text-align: center;
+    font-size: 120%;
+    font-weight: 500;
+}
+
+.calculator {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 15px;
+    padding: 20px;
 }
 
 #income {
     font-family: 'Raleway', sans-serif;
     font-size: 25px;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: center;
 }
 
 #expenses {
@@ -32,7 +52,10 @@ header {
 }
 
 button {
+    background-color: #abdca7;
     cursor: pointer;
+    font-family: 'Raleway', sans-serif;
+    font-size: 15px;
 }
 
 footer{
@@ -47,5 +70,5 @@ footer{
 .socials li{
     display: inline-block;
     margin: 0px 25px;
-    font-size: 50px;
+    font-size: 25px;
 }
