--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -9,8 +9,13 @@ body {
 }
 
 header {
-    background-color: white;
     border-radius: 15px;
+    margin-bottom: 10px;
+    background-color: white;
+}
+
+.title {
+    /*background-color: white;*/
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -19,12 +24,16 @@ header {
     font-weight: 700;
 }
 
+.title h1 {
+    margin: 10px;
+}
+
 nav {
-    background-color: white;
-    border-radius: 15px;
+    /*background-color: white;*/
     text-align: center;
     font-size: 120%;
     font-weight: 500;
+    padding-bottom: 10px;
 }
 
 .calculator {
@@ -43,7 +52,7 @@ nav {
     align-items: center;
 }
 
-#expenses {
+.expense-row {
     font-family: 'Raleway', sans-serif;
     font-size: 20px;
     display: flex;
@@ -52,15 +61,16 @@ nav {
     padding: 20px;
 }
 
+
+.column {
+    margin: 0px 5px;
+}
+
 button {
     background-color: #abdca7;
     cursor: pointer;
     font-family: 'Raleway', sans-serif;
     font-size: 15px;
-}
-
-.remove-expense {
-    background-color: red;
 }
 
 footer{
